Minikube_local_app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bb-demo3
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
    spec:
      containers:
      - name: flask-api
        image: flask-api
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bb-entrypoint3
  namespace: default
spec:
  type: NodePort
  selector:
    bb: web
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30003
