K8_ingress_deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: test.questionpdf.init-lab.ch
    http:
      paths:
      - backend:
          service:
            name: test-service
            port:
              number: 5000
        path: /
        pathType: Prefix
